--- a/xiaomo.css
+++ b/xiaomo.css
@@ -2,3 +2,15 @@ h1 {
     color: blue;
     text-align: left;
 }
+
+body {
+    background-color: #f9f9f9;
+    font-family: Arial, sans-serif;
+}
+
+.element:hover {
+    box-shadow: 12px 12px 20px rgba(0, 0, 0, 0.1),
+    -10px -10px 10px white;
+
+}
+
