--- a/xiaomo.css
+++ b/xiaomo.css
@@ -9,7 +9,7 @@ h1.main {
 p.main {
     font-family: 'Arial', sans-serif;
 
-    font-size: 18px;
+    font-size: 20px;
     font-weight: bold;
     color: rgb(0, 0, 0);
     text-align: center;
@@ -17,9 +17,10 @@ p.main {
 
 
 a.main {
-    font-size: 16px;
-    font-weight: bold;
-    color: rgb(0, 255, 98);
+    font-size: 18px;
+    font-weight: regular;
+    font-family: 'Arial', sans-serif;
+    color: rgb(0, 179, 255);
     text-align: center;
 }
 
@@ -35,17 +36,19 @@ body {
     background-size: 800px auto;
     background-position: center;
     background-repeat: no-repeat;
+    view-timeline-name: "xiaomo";
     /* width: 600px;
     background-color: #f9f9f9;
     font-family: Arial, sans-serif; */
 }
 
 div.card {
+    margin: 0 auto;
     justify-content: center;
     width: 600px;
     height: auto;
     background-color: #fff;
-    border-radius: 10px;
+    border-radius: 30px;
     box-shadow: 6px 6px 12px rgba(0, 0, 0, 0.1),
                 -4px -4px 8px white;
     margin-bottom: 20px;
@@ -56,14 +59,17 @@ div.card {
 
 
 div.cards {
-    justify-content: center;
-    width: 260px;
-    height: auto;
+    display: inline-block;
+    width: 230px;
+    height: 200px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 6px 6px 12px rgba(0, 0, 0, 0.1),
                 -4px -4px 8px white;
+                
     margin-bottom: 20px;
+    margin-right: 20px;
+    margin-left: 20px;
     padding: 20px;
     box-sizing: border-box;
     transition: box-shadow 0.3s ease-in-out;
@@ -73,7 +79,7 @@ div.cards {
 
 div.cardm {
     width: 80%;
-    margin: auto;
+    margin:  0 auto;
     height: auto;
     background-color: #fff;
     border-radius: 10px;
